--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,6 @@
-recursive-exclude examples.* *
-recursive-exclude *.examples *
-recursive-exclude *.examples.* *
-recursive-exclude *.examples.* *
-prune examples
-prune examples.*
-prune *.examples
-prune *.examples.*
+recursive-exclude examples* *
+recursive-exclude *examples *
+recursive-exclude *examples.* *
+prune examples*
+prune *examples
+prune *examples.*
