--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,6 @@ on:
     push:
       branches:
         - master
-        - main
         - 'integration/**'
 
 jobs:
@@ -72,33 +71,23 @@ jobs:
           echo "version=${{ needs.build.outputs.rc_version }}" >> $GITHUB_OUTPUT
         fi
       id: extract_version
-    - name: Create a release
-      uses: comnoco/create-release-action@v2.0.5
-      id: create_release
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-      with:
-        tag_name: v${{ steps.extract_version.outputs.version }} 
-        release_name: Version ${{ steps.extract_version.outputs.version }}
-        body: |
-          Changes in this Release
-          - Added the CphdVectorTFR class (Create a tool to visualize a CPHD 
-          vector's time-frequency representation)
-          - Added release automation 
-        draft: false
-        prerelease: false
     - name: Download all the dists
       uses: actions/download-artifact@v4
       with:
         name: python-package-distributions
         path: dist
-    - name: Upload package
+    - name: Create a release
+      id: create_release
       uses: softprops/action-gh-release@v2
       with:
         tag_name: v${{ steps.extract_version.outputs.version }}
+        generate_release_notes: true
+        name: Version ${{ steps.extract_version.outputs.version }}
         draft: false
         prerelease: false
         files: dist/*
+        body: |
+          Implements fix for MetaIcon.
 #  publish-to-pypi:
 #    name: Publish to PyPI
 #    needs: release
